fix portfolio images bug
- fix bug where background colour of the portfolio images is overflowing.
- change a div element to nav element

--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,7 @@ a.menu-item:hover {
 
     display: flex;
     overflow: hidden;
+    position: relative;
 }
 
 .portfolio-img {
@@ -356,7 +357,7 @@ a.menu-item:hover {
 .portfolio__item::after {
     content: "";
     background: var(--clr-primary);
-    width: calc(100% - (var(--padding-section) * 2));
+    width: 100%;
     height: 16em;
     z-index: -1;
 
@@ -638,7 +639,7 @@ textarea {
         --fs-heading: 2.4rem;
         --fs-title: 3rem;
     
-        --padding-section: 1em 3em;
+        --padding-section: 3em; /*********************************/
     }
 
     .profile-img,
